--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_transport
-	previous = 
-	base = 1c376c13
+	previous = 1c376c13
+	base = ce0bf652
 	trim = 
 	trimbase = 
