--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2
-	previous = 
-	base = c754e8a8
+	previous = c754e8a8
+	base = 07616a2e
 	trim = 
 	trimbase = 
