--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sqlite3_vendor
-	previous = 
-	base = f9e0f145
+	previous = f9e0f145
+	base = a93129d4
 	trim = 
 	trimbase = 
