--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_py
-	previous = 
-	base = fa17dcbf
+	previous = fa17dcbf
+	base = 18208d04
 	trim = 
 	trimbase = 
