--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/shared_queues_vendor
-	previous = 
-	base = da79b492
+	previous = da79b492
+	base = 85f25717
 	trim = 
 	trimbase = 
