--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_converter_default_plugins
-	previous = 
-	base = 3b1cf0d2
+	previous = 3b1cf0d2
+	base = 9f91e35e
 	trim = 
 	trimbase = 
