--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_test_common
-	previous = 
-	base = 79710a72
+	previous = 79710a72
+	base = b85d9e0e
 	trim = 
 	trimbase = 
