--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros2bag
-	previous = 
-	base = e2201e08
+	previous = e2201e08
+	base = b1aa650c
 	trim = 
 	trimbase = 
