--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_cpp
-	previous = 
-	base = ee3604bf
+	previous = ee3604bf
+	base = 7da8db13
 	trim = 
 	trimbase = 
