--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_storage
-	previous = 
-	base = 2bbceb4a
+	previous = 2bbceb4a
+	base = 3d75b003
 	trim = 
 	trimbase = 
