--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_storage_default_plugins
-	previous = 
-	base = 1abe8180
+	previous = 1abe8180
+	base = 9b58b1a4
 	trim = 
 	trimbase = 
