--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 766830f4
+	base = d2ab822c
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = 766830f4
