--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = b0ad8765
+	base = 60c82380
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = b0ad8765
