--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = cf7de040
+	base = 5748d24b
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = cf7de040
