--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 08b6bd54
+	base = 639f3803
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = 08b6bd54
