--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 2a8400ee
+	base = b872d65b
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = 2a8400ee
