--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = c6949eed
+	base = f1f06a1f
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = c6949eed
