--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = bc7e482f
+	base = 3a720801
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = bc7e482f
