--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = f620b833
+	base = 50f4fc4f
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = f620b833
