--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 200e8e44
+	base = 24a20338
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 200e8e44
