--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
 	base = 97400826
-	trimbase = 48d88f38
+	trimbase = 
 	parent = upstream
 	previous = 39c9b2d1
