--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	base = 6bb248db
-	trimbase = 
+	base = 47b1d3ed
+	trimbase = 6bb248db
 	parent = upstream
 	previous = 42856fe1
