--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 82b2a12b
+	base = 740c2c2e
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = 82b2a12b
