--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = bc311529
-	trim = 
-	trimbase = 
+	base = 1c8f569c
+	trim = rosbag2_compression_zstd
+	trimbase = bc311529
