--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 1a17c910
+	base = 1ac8c1f5
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = 1a17c910
