--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 64da5efc
+	base = 3bfd1b11
 	trim = rosbag2
-	trimbase = 
+	trimbase = 64da5efc
