--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 42856fe1
-	base = 34cd8404
+	base = 9c22b46b
 	trim = ros2bag
-	trimbase = 
+	trimbase = 34cd8404
