--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rosbag2_compression_zstd
-	previous = 
-	base = 6825f212
+	previous = 6825f212
+	base = b29ad953
 	trim = 
 	trimbase = 
