--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rosbag2_compression_zstd
-	previous = 
-	base = 1c8f569c
+	previous = 1c8f569c
+	base = 5a9a133c
 	trim = 
 	trimbase = 
