--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_compression_zstd
-	previous = 
-	base = f38f6092
+	previous = f38f6092
+	base = 0ef1fd81
 	trim = 
 	trimbase = 
