--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 87212fe8
+	base = 2e7cfca2
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 87212fe8
