--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 0b3d8992
+	base = 85cb503c
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 0b3d8992
