--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
 	base = 47b1d3ed
-	trimbase = 6bb248db
+	trimbase = 
 	parent = upstream
 	previous = 42856fe1
