--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	base = 6a6219dc
-	trimbase = 
+	base = ed54ff6a
+	trimbase = 6a6219dc
 	parent = upstream
 	previous = 7b9c67cb
