--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 50fc111d
+	base = 5283d6e6
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = 50fc111d
