--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 6b6c4083
+	base = 765ad162
 	trim = ros2bag
-	trimbase = 
+	trimbase = 6b6c4083
