--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = a2168250
+	base = 8bf91c3c
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = a2168250
