--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 17a41b8a
+	base = e16d81c4
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = 17a41b8a
