--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 503286d5
+	base = f6acc3f6
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = 503286d5
