--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = fe5a3a10
+	base = 24c2150e
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = fe5a3a10
