--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 0bcd204a
+	base = f21d3755
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = 0bcd204a
