--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 0750ebe3
+	base = 8af5b919
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = 0750ebe3
