--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = dd78d208
+	base = aedea511
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = dd78d208
