--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = c8ea545f
+	base = d1adacda
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = c8ea545f
