--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 323ba198
+	base = 7975bbf9
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 323ba198
