--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b9c67cb
-	base = 742721d9
+	base = ecfa6580
 	trim = rosbag2
-	trimbase = 
+	trimbase = 742721d9
