--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4f10e63
+	base = c51c1ccf
 	trimbase = 
 	parent = release/rolling/rosbag2_interfaces
-	previous = 
+	previous = e4f10e63
