--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 39ed2d0b
+	base = 54cab10a
 	trimbase = 
 	parent = debian/rolling/rosbag2_interfaces
-	previous = 
+	previous = 39ed2d0b
