--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f6618b57
+	base = 1c79e3db
 	trimbase = 
 	parent = rpm/rolling/rosbag2_interfaces
-	previous = 
+	previous = f6618b57
