--- a/tracks.yaml
+++ b/tracks.yaml
@@ -123,7 +123,8 @@ tracks:
     ros_distro: galactic
     vcs_type: git
     vcs_uri: https://github.com/ros2/rosbag2.git
-    version: :{auto}
+    version: 0.8.0
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
