--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = a787ecee
+	base = a5331ee5
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = a787ecee
