--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 195779b2
+	base = 24c7210e
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 195779b2
