--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 81dfe41f
+	base = d58fff00
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = 81dfe41f
