--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 51d1c1d2
+	base = 3942f4e6
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = 51d1c1d2
