--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 87281ff3
+	base = 3a53b21c
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = 87281ff3
