--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 66c73011
+	base = 6d570af4
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 66c73011
