--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = ee1af103
+	base = 3d2bcc71
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = ee1af103
