--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 2456985d
+	base = df793386
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 2456985d
