--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = 554e7f09
+	base = 56742a33
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 554e7f09
