--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	base = 7fbaaf00
-	trimbase = 
+	base = 5cca233d
+	trimbase = 7fbaaf00
 	parent = upstream
 	previous = 8ae81168
