--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
-	base = becb17c2
-	trimbase = 
+	base = d0b88701
+	trimbase = becb17c2
 	parent = upstream
 	previous = 8ae81168
