--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
 	base = e4f10e63
-	trimbase = c47aa4a9
+	trimbase = 
 	parent = upstream
 	previous = 7b9c67cb
