--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = c3bec4af
+	base = 1f8f4275
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = c3bec4af
