--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = cfc48a9e
+	base = a6051418
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = cfc48a9e
