--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = b125e1f3
+	base = 659d1078
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = b125e1f3
