--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = ef9a898b
+	base = 99daeb8e
 	trim = rosbag2
-	trimbase = 
+	trimbase = ef9a898b
