--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8ae81168
-	base = bffdb441
+	base = f33df3eb
 	trim = ros2bag
-	trimbase = 
+	trimbase = bffdb441
