Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.8.0-1": ["Mon Apr 19 2021", "Karsten Knese", "karsten@openrobotics.org"], "0.7.0-1": ["Thu Mar 18 2021", "Karsten Knese", "karsten@openrobotics.org"], "0.6.0-1": ["Mon Mar 08 2021", "Karsten Knese", "karsten@openrobotics.org"]}
+{"0.8.0-2": ["Tue Apr 20 2021", "Karsten Knese", "karsten@openrobotics.org"], "0.8.0-1": ["Mon Apr 19 2021", "Karsten Knese", "karsten@openrobotics.org"], "0.7.0-1": ["Thu Mar 18 2021", "Karsten Knese", "karsten@openrobotics.org"], "0.6.0-1": ["Mon Mar 08 2021", "Karsten Knese", "karsten@openrobotics.org"]}
