--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,20 @@ jobs:
       with:
         package-name: |
           ros2bag
+          rosbag2
           rosbag2_compression
+          rosbag2_compression_zstd
           rosbag2_cpp
+          rosbag2_interfaces
+          rosbag2_py
           rosbag2_storage
           rosbag2_storage_default_plugins
+          rosbag2_test_common
+          rosbag2_tests
           rosbag2_transport
           shared_queues_vendor
           sqlite3_vendor
-          rosbag2_test_common
-          rosbag2_tests
+          zstd_vendor
         target-ros2-distro: rolling
         vcs-repo-file-url: https://raw.githubusercontent.com/ros2/ros2/master/ros2.repos
         colcon-defaults: |
@@ -36,6 +41,10 @@ jobs:
               "cmake-args": [
                 "-DCMAKE_CXX_FLAGS=\"-Werror\""
               ]
+            },
+            "test": {
+              "ctest-args": ["-LE", "xfail"],
+              "pytest-args": ["-m", "not xfail"]
             }
           }
     - uses: actions/upload-artifact@v1
