--- a/rosbag2_transport/package.xml
+++ b/rosbag2_transport/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>rosbag2_transport</name>
-  <version>0.8.0</version>
+  <version>0.9.0</version>
   <description>Layer encapsulating ROS middleware to allow rosbag2 to be used with or without middleware</description>
   <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
   <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
@@ -15,6 +15,7 @@
   <depend>rclcpp</depend>
   <depend>rosbag2_compression</depend>
   <depend>rosbag2_cpp</depend>
+  <depend>rosbag2_interfaces</depend>
   <depend>rosbag2_storage</depend>
   <depend>rmw</depend>
   <depend>shared_queues_vendor</depend>
