--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 9ac86a68
+	base = 86ec60e2
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 9ac86a68
