--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 706cb1c2
+	base = c003d005
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 706cb1c2
