--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	base = 6272365c
-	trimbase = 
+	base = 59579dbc
+	trimbase = 6272365c
 	parent = upstream
 	previous = 20a547ef
