--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = edf2c3d2
+	base = 798a5edd
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = edf2c3d2
