--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
 	base = d0b88701
-	trimbase = becb17c2
+	trimbase = 
 	parent = upstream
 	previous = 8ae81168
