--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
-	base = f01a4dc1
-	trimbase = 
+	base = 4106d955
+	trimbase = f01a4dc1
 	parent = upstream
 	previous = 20a547ef
