--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = af2d9a84
+	base = 087b6bbd
 	trim = ros2bag
-	trimbase = 
+	trimbase = af2d9a84
