--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = e3289ae7
+	base = 8b534779
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = e3289ae7
