--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 5f7ae0dd
+	base = c3bbb1d1
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = 5f7ae0dd
