--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 37be6e2f
+	base = c9b3998a
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = 37be6e2f
