--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 2cc0ba79
+	base = 3c7c8efd
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = 2cc0ba79
