--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = eec190d4
+	base = 979952e2
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = eec190d4
