--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 7176846d
+	base = 08f993b3
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = 7176846d
