--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 73d0b524
+	base = 3ababc6d
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = 73d0b524
