--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = c23917ed
+	base = 42837d7c
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = c23917ed
