--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = 3f726845
+	base = 01262ca3
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 3f726845
