--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 20a547ef
-	base = e24d21d0
+	base = 5dc047f8
 	trim = rosbag2
-	trimbase = 
+	trimbase = e24d21d0
