--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package(rcutils REQUIRED)
 find_package(rmw REQUIRED)
 find_package(rosbag2_compression REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
+find_package(rosbag2_interfaces REQUIRED)
 find_package(rosbag2_storage REQUIRED)
 find_package(rmw_implementation_cmake REQUIRED)
 find_package(shared_queues_vendor REQUIRED)
@@ -37,7 +38,6 @@ add_library(${PROJECT_NAME} SHARED
   src/rosbag2_transport/player.cpp
   src/rosbag2_transport/qos.cpp
   src/rosbag2_transport/recorder.cpp
-  src/rosbag2_transport/rosbag2_transport.cpp
   src/rosbag2_transport/topic_filter.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -49,6 +49,7 @@ ament_target_dependencies(${PROJECT_NAME}
   rmw
   rosbag2_compression
   rosbag2_cpp
+  rosbag2_interfaces
   rosbag2_storage
   shared_queues_vendor
   yaml_cpp_vendor
@@ -73,13 +74,18 @@ install(
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME})
 ament_export_targets(export_${PROJECT_NAME})
-ament_export_dependencies(rosbag2_cpp rosbag2_compression shared_queues_vendor yaml_cpp_vendor)
+ament_export_dependencies(
+  rosbag2_cpp
+  rosbag2_compression
+  rosbag2_interfaces
+  shared_queues_vendor
+  yaml_cpp_vendor)
 
 function(create_tests_for_rmw_implementation)
   # disable the following tests for connext
   # due to slower discovery of nodes
   set(SKIP_TEST "")
-  if(${rmw_implementation} MATCHES "rmw_connext(.*)_cpp")
+  if(${rmw_implementation} MATCHES "rmw_connext(.*)")
     set(SKIP_TEST "SKIP_TEST")
   endif()
 
@@ -108,11 +114,22 @@ function(create_tests_for_rmw_implementation)
     LINK_LIBS rosbag2_transport
     AMENT_DEPS test_msgs rosbag2_test_common)
 
+  rosbag2_transport_add_gmock(test_play_services
+    test/rosbag2_transport/test_play_services.cpp
+    LINK_LIBS rosbag2_transport
+    AMENT_DEPS test_msgs rosbag2_test_common)
+
   rosbag2_transport_add_gmock(test_play_topic_remap
     test/rosbag2_transport/test_play_topic_remap.cpp
     LINK_LIBS rosbag2_transport
     AMENT_DEPS test_msgs rosbag2_test_common
     ${SKIP_TEST})
+
+  rosbag2_transport_add_gmock(test_play_next
+      test/rosbag2_transport/test_play_next.cpp
+      INCLUDE_DIRS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src/rosbag2_transport>
+      LINK_LIBS rosbag2_transport
+      AMENT_DEPS test_msgs rosbag2_test_common)
 
   rosbag2_transport_add_gmock(test_qos
     src/rosbag2_transport/qos.cpp
