--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 7156bc48
+	base = bf8af2d1
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 7156bc48
