--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 2c2e6768
+	base = c4acd4c2
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 2c2e6768
