--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = cc951a58
+	base = 786fbe2c
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = cc951a58
