--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
-	base = 2bd2e6e4
-	trimbase = 
+	base = a62d547a
+	trimbase = 2bd2e6e4
 	parent = upstream
 	previous = 8b56819c
