--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = eb17c82e
+	base = 42ca50a7
 	trim = ros2bag
-	trimbase = 
+	trimbase = eb17c82e
