--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 5b24a04f
+	base = 31822a35
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 5b24a04f
