--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = b50258d2
+	base = b037d3f7
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = b50258d2
