--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = fd3e193d
+	base = 3f0b0431
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = fd3e193d
