--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = b2b60dcc
+	base = edc0246f
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = b2b60dcc
