--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 04e67ac8
+	base = bc58f15e
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = 04e67ac8
