--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 85a0c768
+	base = 84e26281
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = 85a0c768
