--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 2bfcbe17
+	base = eeecb31c
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = 2bfcbe17
