--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 6edda770
+	base = 6b590b01
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = 6edda770
