--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 63d52c20
+	base = 68daa9eb
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 63d52c20
