--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 9958b367
+	base = 8d662717
 	trim = rosbag2
-	trimbase = 
+	trimbase = 9958b367
