--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 83cb15d0
+	base = a99000df
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 83cb15d0
