--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 88e19645
+	base = 931d1385
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 88e19645
