--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
 	base = 457f2edd
-	trimbase = 3ebf3850
+	trimbase = 
 	parent = upstream
 	previous = 8b56819c
