--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 6abe8343
+	base = e510f49e
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = 6abe8343
