--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
-	base = e2fdb42b
-	trimbase = 
+	base = de3fc2ed
+	trimbase = e2fdb42b
 	parent = upstream
 	previous = 8b56819c
