--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 1a25b533
+	base = ea5d6aa0
 	trim = ros2bag
-	trimbase = 
+	trimbase = 1a25b533
