--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 7ae4013f
+	base = 57c2b312
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 7ae4013f
