--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = c9491059
+	base = d9971e6a
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = c9491059
