--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 57d3f062
+	base = f55ea176
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = 57d3f062
