--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 966ad581
+	base = d890ad40
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = 966ad581
