--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = b0a9c2da
+	base = 8b8c4635
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = b0a9c2da
