--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = a9a9764f
+	base = eeedd094
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = a9a9764f
