--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 2dc50d93
+	base = ac5702b5
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = 2dc50d93
