--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 2457a78c
+	base = 9bfaefdc
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = 2457a78c
