--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 63b932d9
+	base = 3463223f
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 63b932d9
