--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 3a87f03b
+	base = ba141f89
 	trim = rosbag2
-	trimbase = 
+	trimbase = 3a87f03b
