--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 6a96db61
+	base = 4889ac5e
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 6a96db61
