--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = d9301ea9
+	base = fd4a8ea1
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = d9301ea9
