--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
 	base = d9bc5953
-	trimbase = 7c86cb65
+	trimbase = 
 	parent = upstream
 	previous = 8b56819c
