--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	base = 4ff26609
-	trimbase = 
+	base = 0207fe4e
+	trimbase = 4ff26609
 	parent = upstream
 	previous = 8b56819c
