--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 076307b4
+	base = 4d399860
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = 076307b4
