--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rosbag2_interfaces
-	base = 3c105926
-	trimbase = 
+	base = 8db3d461
+	trimbase = 3c105926
 	parent = upstream
 	previous = 8b56819c
