--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 5c519632
+	base = 9b58c788
 	trim = ros2bag
-	trimbase = 
+	trimbase = 5c519632
