--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 7c4af3d5
+	base = 35107261
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 7c4af3d5
