--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = d3d5f65d
+	base = 7d1d977f
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = d3d5f65d
