--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = cd4a0488
+	base = 53a8bd67
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = cd4a0488
