--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 5ec1f3d9
+	base = 60643144
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = 5ec1f3d9
