--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 5c429544
+	base = 17f5044a
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = 5c429544
