--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = f39d41a9
+	base = 297e78a0
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = f39d41a9
