--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = c811ea37
+	base = 9730dd55
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = c811ea37
