--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 563711f2
+	base = 129049d3
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = 563711f2
