--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 70e660b4
+	base = 724f45e7
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 70e660b4
