--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b56819c
-	base = 8459ba02
+	base = 03c246d6
 	trim = rosbag2
-	trimbase = 
+	trimbase = 8459ba02
