--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 5adb6911
+	base = 82b2ca9c
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = 5adb6911
