--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 8b666a9b
+	base = 8b05a2aa
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 8b666a9b
