--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 45580d58
+	base = d18d78c0
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = 45580d58
