--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = e3b031a1
+	base = 9296972e
 	trim = ros2bag
-	trimbase = 
+	trimbase = e3b031a1
