--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 8349ba01
+	base = d5af4dfb
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = 8349ba01
