--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 824a055b
+	base = c93f79a4
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = 824a055b
