--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 33f15f9f
+	base = 24e22ca6
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = 33f15f9f
