--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = bb731ef9
+	base = 4a9b284a
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = bb731ef9
