--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 4a2a10df
+	base = b1bd1335
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = 4a2a10df
