--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 7ab33c8f
+	base = e4530a3d
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = 7ab33c8f
