--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = b2a2e929
+	base = 71583834
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = b2a2e929
