--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = 5febda7f
+	base = 550bd4e4
 	trim = rosbag2
-	trimbase = 
+	trimbase = 5febda7f
