--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cce56021
-	base = e075a037
+	base = e8781c38
 	trim = rosbag2_converter_default_plugins
-	trimbase = 
+	trimbase = e075a037
