--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.10.0": ["Karsten Knese", "karsten@openrobotics.org"], "0.9.0": ["Karsten Knese", "karsten@openrobotics.org"], "0.8.0": ["Karsten Knese", "karsten@openrobotics.org"]}
+{"0.10.1": ["Karsten Knese", "karsten@openrobotics.org"], "0.10.0": ["Karsten Knese", "karsten@openrobotics.org"], "0.9.0": ["Karsten Knese", "karsten@openrobotics.org"], "0.8.0": ["Karsten Knese", "karsten@openrobotics.org"]}
