--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>zstd_vendor</name>
-  <version>0.10.0</version>
+  <version>0.10.1</version>
   <description>Zstd compression vendor package, providing a dependency for Zstd.</description>
   <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
   <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
@@ -14,6 +14,7 @@
   <url type="website">https://facebook.github.io/zstd/</url>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>git</buildtool_depend>
 
   <depend>libzstd-dev</depend>
 
